--- a/pages/academico/cursos--editar.html
+++ b/pages/academico/cursos--editar.html
@@ -83,7 +83,7 @@
             <section role="tabpanel" class="tab-pane fade in active" id="tabs-cursos-tab-3">
               <div class="row mt-sm">
                 <div class="col-sm-12">
-                  <h4 class="semibold"> Cadastrar novo curso</h4>
+                  <h4 class="semibold"> Editar curso</h4>
                   <small>Campos com asterisco vermelho ( <span class="semibold text-danger">*</span> ) são
                     obrigatórios
                   </small>
