--- a/pages/posto/unidade.html
+++ b/pages/posto/unidade.html
@@ -105,10 +105,10 @@
                                 <input type="radio" name="options" id="" autocomplete="off" checked="">
                                 Todos
                               </label>
-                              <label class="btn btn-secondary">
+                              <label class="btn btn-secondary-outline">
                                 <input type="radio" name="options" id="" autocomplete="off"> Ativo
                               </label>
-                              <label class="btn btn-secondary">
+                              <label class="btn btn-secondary-outline">
                                 <input type="radio" name="options" id="" autocomplete="off"> Inativo
                               </label>
                             </div>
